# rust-backend-template

./: Cargo.toml  shuttle.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
