[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
axum = "0.7.3"

shuttle-shared-db = { version = "0.37.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "runtime-tokio-rustls"
] }